mitsuha: fix latest post anchor not covering entire block

--- a/templates/assets/css/index.css
+++ b/templates/assets/css/index.css
@@ -30,8 +30,10 @@ section#index-latestPost, section#index-allPosts {
 
     section#index-latestPost > article > a {
         position: absolute;
-        width: inherit;
-        height: inherit;
+        /* width: inherit;
+        height: inherit; */
+        width: 100%;
+        height: 100%;
     }    
 
     div#index-latestPost-header {
